tests/ui/tee.stderr
error[E0599]: the method `union` exists for struct `Tee<Iter<'_, ({integer}, {integer})>>`, but its trait bounds were not satisfied
 --> tests/ui/tee.rs:7:17
  |
7 |     let _c = a0.union(a1);
  |                 ^^^^^ method cannot be called on `Tee<Iter<'_, ({integer}, {integer})>>` due to unsatisfied trait bounds
  |
 ::: $CARGO/itertools-0.10.5/src/tee.rs
  |
  | pub struct Tee<I>
  | -----------------
  | |
  | doesn't satisfy `<_ as IntoIterator>::Item = &RangeSetBlaze<_>`
  | doesn't satisfy `<_ as IntoIterator>::Item = RangeSetBlaze<_>`
  | doesn't satisfy `_: MultiwayRangeSetBlaze<'_, _>`
  | doesn't satisfy `_: MultiwayRangeSetBlazeRef<_>`
  | doesn't satisfy `_: SortedDisjoint<_>`
  |
 ::: $RUST/core/src/slice/iter.rs
  |
  | pub struct Iter<'a, T: 'a> {
  | -------------------------- doesn't satisfy `_: SortedDisjoint<_>`
  |
  = note: the following trait bounds were not satisfied:
          `<Tee<core::slice::Iter<'_, ({integer}, {integer})>> as IntoIterator>::Item = &RangeSetBlaze<_>`
          which is required by `Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlaze<'_, _>`
          `<Tee<core::slice::Iter<'_, ({integer}, {integer})>> as IntoIterator>::Item = RangeSetBlaze<_>`
          which is required by `Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlazeRef<_>`
          `core::slice::Iter<'_, ({integer}, {integer})>: range_set_blaze::SortedDisjoint<_>`
          which is required by `Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::SortedDisjoint<_>`
          `<&Tee<core::slice::Iter<'_, ({integer}, {integer})>> as IntoIterator>::Item = &RangeSetBlaze<_>`
          which is required by `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlaze<'_, _>`
          `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: IntoIterator`
          which is required by `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlaze<'_, _>`
          `<&Tee<core::slice::Iter<'_, ({integer}, {integer})>> as IntoIterator>::Item = RangeSetBlaze<_>`
          which is required by `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlazeRef<_>`
          `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: IntoIterator`
          which is required by `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlazeRef<_>`
          `<&Tee<core::slice::Iter<'_, ({integer}, {integer})>> as IntoIterator>::Item = _`
          which is required by `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwaySortedDisjoint<_, _>`
          `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: IntoIterator`
          which is required by `&Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwaySortedDisjoint<_, _>`
          `<&mut Tee<core::slice::Iter<'_, ({integer}, {integer})>> as IntoIterator>::Item = &RangeSetBlaze<_>`
          which is required by `&mut Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlaze<'_, _>`
          `<&mut Tee<core::slice::Iter<'_, ({integer}, {integer})>> as IntoIterator>::Item = RangeSetBlaze<_>`
          which is required by `&mut Tee<core::slice::Iter<'_, ({integer}, {integer})>>: range_set_blaze::MultiwayRangeSetBlazeRef<_>`

warning: unused import: `range_set_blaze::prelude`
 --> tests/ui/tee.rs:2:5
  |
2 | use range_set_blaze::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
